--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="一个用于思考、记录与构建的个人数字空间" />
 
     <!-- 网站图标 -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
