--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- 页面描述 -->
     <meta name="description" content="一个用于思考、记录与构建的个人数字空间" />
 
-    <!-- 网站图标 -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- 网站图标：提供多种格式以兼容不同浏览器 -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
